fixed footer content overlap problem

--- a/src/Views/About/About.css
+++ b/src/Views/About/About.css
@@ -1,13 +1,10 @@
-.clear {
-    clear: both;
-    height: 1200px;
-}
+
 
 .about {
     width: 100%;
-    height: 90vh;
     display: flex;
     flex-direction: column;
+    margin-bottom: 100px;
   }
 
 .about_top{
@@ -25,7 +22,7 @@
     margin: auto;
     width: 100%;
     padding: 10px;
-    
+
 }
 
 .about_bottom{
