--- a/src/Views/Stories/Stories.css
+++ b/src/Views/Stories/Stories.css
@@ -1,5 +1,9 @@
-h4{
-    color: black;
+.Heading h2{
+    margin: 2rem;
+    color: #73B55C;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
 }
 .body{
     display: flex;
